more fits, more normalization

--- a/gg220602_allen_cellsubtypes_fit.ipynb
+++ b/gg220602_allen_cellsubtypes_fit.ipynb
@@ -488,7 +488,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -503,6 +503,58 @@
       "INFO:root:Gene list extracted from ./fits/gg_220602_022_allen_celltypes_1/genes.csv.\n",
       "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_B08_gaba/diagnostic_figures created.\n",
       "INFO:root:Search data stored to ./fits/gg_220602_022_allen_celltypes_1/allen_B08_gaba/raw.sd.\n",
+      "INFO:root:Starting parallelized grid scan.\n",
+      "INFO:root:Parallelized grid scan complete.\n",
+      "INFO:root:All grid point data cleaned from disk.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_B08_gaba/Bursty_Poisson_20x21/analysis_figures created.\n",
+      "INFO:root:Runtime: 5913.5 seconds.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_B08_glu/Bursty_Poisson_20x21 created.\n",
+      "INFO:root:Global inference parameters stored to ./fits/gg_220602_022_allen_celltypes_1/allen_B08_glu/Bursty_Poisson_20x21/parameters.pr.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_B08_glu\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_220602_022_allen_celltypes_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_B08_glu/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_220602_022_allen_celltypes_1/allen_B08_glu/raw.sd.\n",
+      "INFO:root:Starting parallelized grid scan.\n",
+      "INFO:root:Parallelized grid scan complete.\n",
+      "INFO:root:All grid point data cleaned from disk.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_B08_glu/Bursty_Poisson_20x21/analysis_figures created.\n",
+      "INFO:root:Runtime: 6318.8 seconds.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_gaba/Bursty_Poisson_20x21 created.\n",
+      "INFO:root:Global inference parameters stored to ./fits/gg_220602_022_allen_celltypes_1/allen_C01_gaba/Bursty_Poisson_20x21/parameters.pr.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_C01_gaba\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_220602_022_allen_celltypes_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_gaba/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_220602_022_allen_celltypes_1/allen_C01_gaba/raw.sd.\n",
+      "INFO:root:Starting parallelized grid scan.\n",
+      "INFO:root:Parallelized grid scan complete.\n",
+      "INFO:root:All grid point data cleaned from disk.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_gaba/Bursty_Poisson_20x21/analysis_figures created.\n",
+      "INFO:root:Runtime: 2834.0 seconds.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_glu/Bursty_Poisson_20x21 created.\n",
+      "INFO:root:Global inference parameters stored to ./fits/gg_220602_022_allen_celltypes_1/allen_C01_glu/Bursty_Poisson_20x21/parameters.pr.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_C01_glu\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_220602_022_allen_celltypes_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_glu/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_220602_022_allen_celltypes_1/allen_C01_glu/raw.sd.\n",
+      "INFO:root:Starting parallelized grid scan.\n",
+      "INFO:root:Parallelized grid scan complete.\n",
+      "INFO:root:All grid point data cleaned from disk.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_C01_glu/Bursty_Poisson_20x21/analysis_figures created.\n",
+      "INFO:root:Runtime: 3992.6 seconds.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_F08_gaba/Bursty_Poisson_20x21 created.\n",
+      "INFO:root:Global inference parameters stored to ./fits/gg_220602_022_allen_celltypes_1/allen_F08_gaba/Bursty_Poisson_20x21/parameters.pr.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_F08_gaba\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_220602_022_allen_celltypes_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_220602_022_allen_celltypes_1/allen_F08_gaba/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_220602_022_allen_celltypes_1/allen_F08_gaba/raw.sd.\n",
       "INFO:root:Starting parallelized grid scan.\n"
      ]
     }
@@ -526,6 +578,15 @@
     "                dataset_strings[i], dir_string, dataset_attr_names=attribute_names)\n",
     "    full_result_string = inference_parameters.fit_all_grid_points(60,search_data)\n",
     "    result_strings.append(full_result_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_strings"
    ]
   },
   {
@@ -573,15 +634,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -614,18 +666,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_strings  = ['./fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
-    " './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l6ct/Bursty_Poisson_1x1/grid_scan_results.res']"
+    "# result_strings  = ['./fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_A08_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B01_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_B08_l6ct/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l5it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l6it/Bursty_Poisson_1x1/grid_scan_results.res',\n",
+    "#  './fits/gg_220601_022_allen_cellsubtypes_1/allen_C01_l6ct/Bursty_Poisson_1x1/grid_scan_results.res']"
    ]
   },
   {
