--- a/gg220529_allen_celltypes_de_analysis.ipynb
+++ b/gg220529_allen_celltypes_de_analysis.ipynb
@@ -55,7 +55,7 @@
     "dataset_meta = ['A08', 'B01','B08','C01']\n",
     "cluster_names = ['gaba','glu']\n",
     "dataset_names = ['allen_'+x+'_'+y for x in dataset_meta for y in cluster_names] \n",
-    "loom_filepaths = ['/home/ggorin/count_data/loom_allen_celltype_kb/'+x+'.loom' for x in dataset_names] \n",
+    "loom_filepat3hs = ['/home/ggorin/count_data/loom_allen_celltype_kb/'+x+'.loom' for x in dataset_names] \n",
     "\n",
     "transcriptome_filepath = './polyA_ref/gg_200524_mouse_genome_polyA_cum_1'\n",
     "attribute_names=['spliced','unspliced','gene_name','barcode']\n"
