--- a/gg220603_allen_celltypes_de.ipynb
+++ b/gg220603_allen_celltypes_de.ipynb
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1342,13 +1342,53 @@
        "array([46, 56, 54, 38])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "((~de_ttest)&dr_par[:,:,0]).sum(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((~de_ttest)&ki).all(0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(ki&dr_par[:,:,0]).all(0).sum()"
    ]
   },
   {
@@ -2304,6 +2344,28 @@
    "outputs": [],
    "source": [
     "gf = gf & (np.abs(fc_mean)<1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.78746978, -0.49881283, -0.01507914,  0.04449844,  0.60335708,\n",
+       "       -0.43482393,  0.65996277,  0.68539482,  0.16372101,  0.18387938,\n",
+       "        0.57105812,  0.52099347, -0.31267977])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fc_mean[gf]"
    ]
   },
   {
