--- a/gg220603_allen_celltypes_de.ipynb
+++ b/gg220603_allen_celltypes_de.ipynb
@@ -242,7 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ggorin/projects/seq-cme-technoise/analysis.py:646: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/ggorin/projects/seq-cme-technoise/analysis.py:638: RuntimeWarning: divide by zero encountered in log10\n",
       "  pv = -np.log10(p)\n"
      ]
     },
@@ -266,26 +266,13 @@
     "\n",
     "for j in range(n_datasets):\n",
     "    gf_ttest,fc_ = compute_diffexp(sd_arr_gaba[j],sd_arr_glu[j],lognormalize=True,viz=True,method='ttest',\n",
-    "                                   ax1=ax1[j],pval_thr=pval_thr)\n",
+    "                                   ax1=ax1[j],pval_thr=pval_thr,bonferroni=False) #note Bonferroni has already been applied\n",
     "    de_ttest[j,:] = gf_ttest\n",
     "fig1.tight_layout()\n",
     "\n",
     "\n",
     "fig_string = sr_arr_gaba[0].batch_analysis_string+'/ttest_s.png'\n",
     "plt.savefig(fig_string,dpi=450)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for j in range(n_datasets):\n",
-    "#     print('Dataset: '+dataset_meta[j])\n",
-    "#     print(gn[de_ttest[j,:]])\n",
-    "# print('All:')\n",
-    "# print(gn[de_ttest[:,:].all(0)])"
    ]
   },
   {
@@ -297,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +572,7 @@
        "Text(0, 0.5, 'Glu $\\\\log_2$ mean')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -615,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +622,7 @@
        "Text(0.5, 0, '$\\\\mu$ fold change across 4 datasets')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
