--- a/gg220602_allen_basic_qc.ipynb
+++ b/gg220602_allen_basic_qc.ipynb
@@ -15,7 +15,7 @@
     "id": "d2qrzWG0_Yqm"
    },
    "source": [
-    "In the current notebook, we run the *Monod* inference pipeline on eight pre-clustered mouse brain cell datasets, disaggregated into GABAergic and glutamatergic cell types, using a common set of 3,000 genes, a $20\\times 21$ grid, and four models (bursty, constitutive, extrinsic, and CIR-like)."
+    "We have run the *Monod* inference pipeline on four pre-clustered mouse brain cell datasets, disaggregated into GABAergic and glutamatergic cell types, as well as some glutamatergic subtypes. We would like to check whether the sampling parameters obtained for each dataset are consistent."
    ]
   },
   {
@@ -216,24 +216,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 97,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./fits/gg_220602_022_allen_celltypes_1/analysis_figures/landscape_qc.png'"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "fig_string"
+    "As might be expected, the subtypes with very low cell numbers appear to show stronger deviations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
