--- a/gg220602_allen_cellsubtypes_norm.ipynb
+++ b/gg220602_allen_cellsubtypes_norm.ipynb
@@ -176,62 +176,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_noise_decomp_(S_,sizefactor = 'pf',lognormalize=True,pcount=0,knee_thr=None):\n",
-    "#     \"\"\"\n",
-    "#     This method performs normalization and variance stabilization on the raw data, and\n",
-    "#     reports the fractions of normalized variance retained and removed as a result of the process.\n",
-    "\n",
-    "#     Input:\n",
-    "#     sizefactor: what size factor to use. \n",
-    "#         'pf': Proportional fitting; set the size of each cell to the mean size.\n",
-    "#         a number: use this number (e.g., 1e4 for cp10k).\n",
-    "#         None: do not do size/depth normalization.\n",
-    "#     lognormalize: whether to do log(1+x).\n",
-    "#     pcount: pseudocount added to ensure division by zero does not occur.\n",
-    "#     knee_thr: knee plot UMI threshold used to filter out low-expression cells.\n",
-    "\n",
-    "#     Output: \n",
-    "#     f: array with size n_genes x 2 x 2. \n",
-    "#         dim 0: gene\n",
-    "#         dim 1: variance fraction (retained, discarded)\n",
-    "#         dim 2: species (unspliced, spliced)\n",
-    "#     The unspliced and spliced species are analyzed independently.\n",
-    "#     \"\"\"\n",
-    "#     n_genes = S_.shape[0]\n",
-    "#     f = np.zeros((n_genes,2)) #genes -- bio vs tech -- species\n",
-    "\n",
-    "#     S = np.copy(S_)\n",
-    "\n",
-    "#     if knee_thr is not None:\n",
-    "# #         cf = knee_plot(thr=knee_thr)\n",
-    "#         cf = S.sum(0)>knee_thr\n",
-    "#         S = S[:,cf]\n",
-    "\n",
-    "#     CV2_1 = S.var(1)/S.mean(1)**2\n",
-    "\n",
-    "#     if sizefactor is not None:\n",
-    "#         if sizefactor == 'pf':\n",
-    "#             c1 = S.sum(0).mean()\n",
-    "#         else:\n",
-    "#             c1 = sizefactor\n",
-    "#         S = S/(S.sum(0)[None,:]+pcount)*c1\n",
-    "#     if lognormalize:\n",
-    "#         S = np.log(1+S)\n",
-    "#     CV2_1_ = S.var(1)/S.mean(1)**2\n",
-    "\n",
-    "#     #compute fraction of CV2 eliminated for unspliced and spliced\n",
-    "\n",
-    "#     f[:,0] = CV2_1_/CV2_1\n",
-    "#     f[:,1] = 1-f[:,0]\n",
-    "#     return f"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -520,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can rerun the analysis using mechanistic noise model applied to the whole dataset."
+    "We can rerun the analysis using mechanistic noise model applied to the whole dataset. It turns out to be highly consistent.\n"
    ]
   },
   {
@@ -627,13 +571,6 @@
     "fig_string = sr.batch_analysis_string+'/mech_var_mean_aggregated.png'\n",
     "plt.savefig(fig_string,dpi=450)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
