--- a/gg220603_allen_celltypes_de.ipynb
+++ b/gg220603_allen_celltypes_de.ipynb
@@ -1294,7 +1294,7 @@
     }
    ],
    "source": [
-    "param_names_text = ('log10 b','log10 beta','log10 gamma','log10 ki')\n",
+    "param_names_text = ('log10 b','log10 beta','log10 gamma','log10 k')\n",
     "\n",
     "for k in range(n_phys_pars+1):\n",
     "    print('Parameter: '+param_names_text[k])\n",
