--- a/gg220603_allen_celltypes_de.ipynb
+++ b/gg220603_allen_celltypes_de.ipynb
@@ -268,6 +268,7 @@
     "    gf_ttest,fc_ = compute_diffexp(sd_arr_gaba[j],sd_arr_glu[j],lognormalize=True,viz=True,method='ttest',\n",
     "                                   ax1=ax1[j],pval_thr=pval_thr,bonferroni=False) #note Bonferroni has already been applied\n",
     "    de_ttest[j,:] = gf_ttest\n",
+    "    ax1[j].set_xlabel('Fold change')\n",
     "fig1.tight_layout()\n",
     "\n",
     "\n",
@@ -2679,7 +2680,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t2 = time.time()\n",
+    "print('Runtime: {:.2f} seconds.'.format(t2-t1))"
+   ]
   }
  ],
  "metadata": {
